# nexa-blockchain

./: CMakeLists.txt  Cargo.toml  Makefile  Makefile.am  Makefile.in  README.md  README_SETUP.md  backup.sh  build_log.txt  check_project.sh  config.h  config.status  configure  configure.ac  network_config.py  nexad  nohup.out  peers.txt
autom4te.cache/: output.0  output.2  requests  traces.0
core_backup/src/: main.rs
docs/: Nexa_Core_Documentation.md  installation.md  whitepaper.md
nexa-blockchain/: Cargo.toml
src/: Makefile  Makefile.am  Makefile.in  consensus.rs  main.cpp  main.rs  network.rs  nexa-cli  nexa_addrman.txt  nexa_bind.txt  nexa_connect.txt  nexa_firewall.txt  nexa_listen.txt  nexa_peer.txt  nexa_ports.txt  nexa_whitelist.txt  nexad  nexad.cpp
src/.deps/: consensus.Po  governance.Po  main.Po  mempool.Po  nexad.Po
src/api/: exchange_api.cpp  exchange_api.h
src/consensus/: consensus.cpp  consensus.h  genesis.cpp  powpos.cpp  powpos.h
src/consensus/.deps/: consensus.Po
src/crypto/: verification.cpp  verification.h
src/governance/: governance.cpp  governance.h
src/governance/.deps/: governance.Po
src/mempool/: mempool.cpp  mempool.h  transaction.h
src/mempool/.deps/: mempool.Po
src/network/: network.cpp  network.h
src/network/.deps/: network.Po
src/rpc/: nexa-cli.cpp
src/rpc/.deps/: nexa-cli.Po
src/smartcontracts/: smartcontract.cpp  smartcontract.h  wasm_executor.cpp  wasm_executor.h
src/smartcontracts/.deps/: wasm_executor.Po
whitepaper/: Nexa_Core_Whitepaper.md
